--- a/style.css
+++ b/style.css
@@ -78,3 +78,175 @@ nav li a {
     margin-top: 30px;
     border-radius: 10px;
 }
+
+/* Main style hare */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.features-section {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.teams-image {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+    border-radius: 20px;
+}
+
+.teams-content {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.teams-titale {
+    font-size: 45px;
+}
+
+.teams-titale .quick-list {
+    color: #727272;
+    font-weight: 500;
+}
+
+.teams-titale .features {
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.teams-description {
+    color: #727272;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.love-section {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+
+.love-container .love-card {
+    padding: 30px;
+    margin: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.love-container .nav-titale {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.ten-years {
+    width: 342px;
+    border-radius: 10px;
+    background: #FF900E;
+    color: #FFF;
+    text-align: center;
+    padding: 40px;
+}
+
+.ten-years h2 {
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 70px;
+    margin: 0;
+}
+
+.ten-years p {
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.facts-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-container .card {
+    border-radius: 10px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-container .card-titale {
+    font-weight: 600;
+    color: #727272;
+    font-size: 20px;
+    margin-top: 5px;
+}
+
+.card-status {
+    font-size: 45px;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.sponspors-container {
+    text-align: center;
+}
+
+.sponspors-image {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    align-items: center;
+}
+
+.sponspors-container img {
+    width: 153.333px;
+    height: 50px;
+}
+
+
+/* Responsive styles area hare */
+/* Mobile devices  */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .features-section,
+    .facts-container,
+    .sponspors-image {
+        flex-direction: column;
+    }
+
+    .teams-image {
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content,
+    .facts-container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .facts-container {
+        gap: 20px;
+    }
+}
+
+/* Tablet and medium devices */
+@media screen and (min-width: 576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav,
+    .features-section,
+    .sponspors-image {
+        flex-direction: column;
+    }
+
+}
