--- a/style.css
+++ b/style.css
@@ -142,6 +142,11 @@ main {
     padding-left: 20px;
 }
 
+.love-image img {
+    height: 90%;
+    margin-left: 90px;
+}
+
 .ten-years {
     width: 342px;
     border-radius: 10px;
@@ -149,6 +154,8 @@ main {
     color: #FFF;
     text-align: center;
     padding: 40px;
+    position: relative;
+    bottom: 100px;
 }
 
 .ten-years h2 {
@@ -207,6 +214,23 @@ main {
     height: 50px;
 }
 
+/* Footer styles hare */
+.footer-container {
+    margin: 200px 240px;
+    width: 1440px;
+    height: 100px;
+    border-radius: 10px;
+    background: #FFF4E7;
+
+}
+
+.footer-container p {
+    color: #424242;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 40px 400px;
+}
 
 /* Responsive styles area hare */
 /* Mobile devices  */
@@ -217,9 +241,20 @@ main {
 
     nav,
     .features-section,
+    .love-section,
     .facts-container,
     .sponspors-image {
         flex-direction: column;
+    }
+
+    .love-image img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years {
+        position: static;
+        max-width: 300px;
     }
 
     .teams-image {
@@ -245,7 +280,8 @@ main {
 
     nav,
     .features-section,
-    .sponspors-image {
+    .sponspors-image,
+    .love-section {
         flex-direction: column;
     }
 
